--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "punkapi-vue",
   "version": "0.1.0",
   "private": true,
+  "description": "PunkApi Catalogue made with Vue.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
