--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "inject-loader": "^4.0.1",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.12.0",
     "sass": "^1.19.0",
