--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "unit": "vue-cli-service test:unit",
-    "unit:cov": "vue-cli-service test:unit --coverage",
+    "unit:cov": "vue-cli-service test:unit --coverage && jest-coverage-badges --input './reports/unit/coverage/coverage-summary.json' --output './reports/unit/coverage/badges'",
     "unit:cov--watch": "vue-cli-service test:unit --coverage --watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "jest-coverage-badges": "^1.1.2",
     "sass-resources-loader": "^2.1.1",
     "style-resources-loader": "^1.3.3",
     "vue": "^2.6.11",
